--- a/registration.html
+++ b/registration.html
@@ -3,108 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Вхід</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title> Реєстрація </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: stretch;
-        }
-
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            margin-top: 120px;
-            text-align: center;
-            padding: 20px;
-            position: relative;
-            z-index: 3;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        input[type="password"] {
-            width: calc(100% - 40px);
-            padding: 10px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 100px;
-            display: inline-block;
-        }
-
-        .btn {
-            background-color: #A689FF;
-            color: white;
-            padding: 14px 20px;
-            border: none;
-            border-radius: 100px;
-            cursor: pointer;
-        }
-
-        .btn:hover {
-            background-color: rgba(166, 137, 255, 0.5);
-        }
-
-        .header-text {
-            color: rebeccapurple;
-        }
-
-        .ellipse-2 {
-            background-color: rgba(166, 137, 255, 1);
-            border-radius: 89.5px;
-            height: 179px;
-            left: -60px;
-            position: absolute;
-            top: 115px;
-            width: 179px;
-        }
-
-        .ellipse-2-1 {
-            height: 201px;
-            left: 40px;
-            background-color: rgba(214, 187, 252, 0.58);
-            border-radius: 100.5px;
-            position: absolute;
-            top: 0;
-            width: 201px;
-        }
-
-        .ellipse-container {
-            height: 170px;
-            position: relative;
-            max-width: 400px;
-            margin-top: -120px;
-        }
-
-        .border {
-            border-bottom: 4px solid;
-        }
-        .password-container {
-            width: 400px;
-            position: relative;
-        }
-
-        .fa-eye,
-        .fa-eye-slash {
-            position: absolute;
-            top: 28%;
-            right: 4%;
-            cursor: pointer;
-            color: lightgray;
-        }
-
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="GetTogether-logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -115,15 +18,21 @@
 <div class="container">
     <h2 class="header-text">Давай знайомитись</h2>
     <form class="form-group" method="post" onsubmit="return validateForm()">
-        <input type="text" placeholder="Ім`я" name="name" required><br>
-        <input type="text" placeholder="Прізвище" name="surname" required><br>
-        <input type="email" placeholder="Пошта" name="email" required><br>
+        <label>
+            <input type="text" placeholder="Ім`я" name="name" required>
+        </label><br>
+        <label>
+            <input type="text" placeholder="Прізвище" name="surname" required>
+        </label><br>
+        <label>
+            <input type="email" placeholder="Пошта" name="email" required>
+        </label><br>
         <div class="password-container">
-            <input type="password" placeholder="Пароль" id="password" name="password" required>
+            <label for="password"></label><input type="password" placeholder="Пароль" id="password" name="password" required>
             <i class="fas fa-eye" id="eye"></i>
         </div>
       <div class="password-container">
-            <input type="password" placeholder="Підтвердження паролю" id="password1" name="password" required>
+          <label for="password1"></label><input type="password" placeholder="Підтвердження паролю" id="password1" name="password" required>
             <i class="fas fa-eye" id="eye1"></i>
         </div>
         <button type="submit" class="btn">Зареєструватися</button>
@@ -163,10 +72,48 @@
         }
     }
 
-function validateForm() {
-        // Ваша логіка перевірки форми тут
-        return true; // Повертає true, якщо форма валідна, інакше false
+    function validateForm() {
+        const name = document.getElementsByName('name')[0].value;
+        const surname = document.getElementsByName('surname')[0].value;
+        const email = document.getElementsByName('email')[0].value;
+        const password = document.getElementById('password').value;
+        const confirmPassword = document.getElementById('password1').value;
+
+        if (password !== confirmPassword) {
+            // Перевірка, чи співпадають пароль та його підтвердження
+            alert('Пароль та його підтвердження не співпадають');
+            return false;
+        }
+
+        const data = {
+            name: name,
+            surname: surname,
+            email: email,
+            password: password
+        };
+
+        fetch('https://Gettogether.com/api/auth/register', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(data),
+        })
+            .then(response => response.json())
+            .then(data => {
+                // Обробка відповіді від сервера тут
+                console.log(data);
+                // перенаправити користувача на іншу сторінку після успішної реєстрації
+                window.location.href = '/login';
+            })
+            .catch(error => {
+                console.error('Помилка реєстрації:', error);
+            });
+
+        // Зупинити відправку форми
+        return false;
     }
+
 </script>
 </body>
 
