--- a/sign_in.html
+++ b/sign_in.html
@@ -8,163 +8,10 @@
     <title> Вхід</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: stretch;
-        }
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/x-icon" href="GetTogether-logo.png">
 
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            margin-top: 120px;
-            text-align: center;
-            padding: 20px;
-            position: relative;
-            z-index: 3;
-        }
 
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        input[type="password"] {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 100px;
-            display: inline-block;
-        }
-
-        .btn {
-            background-color: #A689FF;
-            color: white;
-            padding: 14px 20px;
-            border: none;
-            border-radius: 100px;
-            cursor: pointer;
-        }
-
-        .btn:hover {
-            background-color: rgba(166, 137, 255, 0.5);
-        }
-
-        .header-text {
-            color: rebeccapurple;
-        }
-
-        .ellipse-2 {
-            background-color: rgba(166, 137, 255, 1);
-            border-radius: 89.5px;
-            height: 179px;
-            left: -60px;
-            position: absolute;
-            top: 115px;
-            width: 179px;
-        }
-
-        .ellipse-2-1 {
-            height: 201px;
-            left: 40px;
-            background-color: rgba(214, 187, 252, 0.58);
-            border-radius: 100.5px;
-            position: absolute;
-            top: 0;
-            width: 201px;
-        }
-
-        .ellipse-container {
-            height: 170px;
-            position: relative;
-            max-width: 400px;
-            margin-top: -120px;
-        }
-
-        .border {
-            border-bottom: 4px solid;
-        }
-
-        progress {
-            width: 300px;
-            height: 5px;
-            border: 0;
-        }
-
-        progress::-webkit-progress-bar {
-            background-color: rgba(166, 137, 255, 0.40);
-        }
-
-        progress::-webkit-progress-value {
-            background-color: #6200EE;
-        }
-
-        .password-container {
-            width: 400px;
-            position: relative;
-        }
-
-        .fa-eye,
-        .fa-eye-slash {
-            position: absolute;
-            top: 28%;
-            right: 4%;
-            cursor: pointer;
-            color: lightgray;
-        }
-
-        .sign {
-            display: flex;
-        }
-
-        .google-btn {
-            margin-left: auto;
-            margin-right: auto;
-            width: calc(100% - 150px);
-            height: 42px;
-            padding: 14px 15px;
-            background-color: rgba(255, 255, 255, 0.4);
-            border-radius: 100px;
-            box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .25);
-            cursor: pointer;
-            transition: box-shadow 0.3s;
-        }
-
-        .google-btn:hover {
-            box-shadow: 0 0 6px #6200EE;
-        }
-
-        .google-icon-wrapper {
-            position: absolute;
-            margin-top: 1px;
-            margin-left: 1px;
-            width: 40px;
-            height: 40px;
-            border-radius: 2px;
-        }
-
-        .google-icon {
-            position: absolute;
-            margin-top: 11px;
-            margin-left: 11px;
-            width: 18px;
-            height: 18px;
-        }
-
-        .btn-text {
-            margin: 11px 11px 0px 70px;
-            color: #6200EE;
-            font-size: 14px;
-            letter-spacing: 0.2px;
-        }
-    </style>
 </head>
 
 <body>
@@ -174,23 +21,26 @@
 </div>
 <div class="container">
     <h2 class="header-text">Вітаємо в GetTogether</h2>
-    <form class="form-group" method="post" onsubmit="return validateForm()">
-        <input type="email" placeholder="email" name="email" required><br>
+    <form class="form-group" method="post" onsubmit="return validateForm()" id="loginForm">
+        <label>
+            <input type="email" placeholder="email" name="email" required>
+        </label><br>
         <div class="password-container">
-            <input type="password" placeholder="password" id="password" name="password" required>
+            <label for="password"></label><input type="password" placeholder="password" id="password" name="password" required>
             <i class="fas fa-eye" id="eye"></i>
         </div>
         <button type="submit" class="btn">Вхід</button>
         <div id="my-signin2"></div>
         <div class="google-btn" onclick="googleSignIn()" style="margin-top: 20px;">
             <div class="google-icon-wrapper">
-                <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" />
+                <img class="google-icon"
+                     src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
             </div>
             <p class="btn-text"><b>Sign in with Google</b></p>
         </div>
     </form>
 
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
 
 
 </div>
@@ -212,5 +62,38 @@
             eyeIcon.classList.add('fa-eye');
         }
     }
+        const loginForm = document.getElementById('loginForm');
+
+        loginForm.addEventListener('submit', function(event) {
+            event.preventDefault();
+            const email = document.getElementsByName('email')[0].value;
+            const password = document.getElementsByName('password')[0].value;
+
+            // Відправляємо POST-запит до API для входу
+            fetch('https://Gettogether.com/api/auth/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    name: email, //  ім'я користувача може бути email або інше поле для входу
+                    password: password
+                })
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.token) {
+                        // Вхід успішний, збережіть токен у локальному сховищі
+                        localStorage.setItem('token', data.token);
+                        // Перенаправте користувача на іншу сторінку або виконайте інші дії
+                        window.location.href = '/dashboard';
+                    } else {
+                        alert('Неправильний логін або пароль');
+                    }
+                })
+                .catch(error => {
+                    console.error('Помилка входу:', error);
+                });
+        });
 </script>
 </body>
